--- a/src/styles.css
+++ b/src/styles.css
@@ -8,3 +8,28 @@ div.container{
 .fill-remaining-space{
     flex: 1 1 auto;
 }
+
+form.normal-form{
+    margin: 10px;
+}
+
+.controles-container{
+    width: 100%;
+    padding: 5%;
+}
+
+.controles-container > * {
+    width: 100%;
+}
+
+.add-bottom-padding{
+    padding-bottom: 10px;
+}
+
+mat-radio-group mat-radio-button{
+    margin-left: 5px;
+}
+
+.button-row button{
+    margin: 5px;
+}
