--- a/src/app/employees/employee/employee.component.html
+++ b/src/app/employees/employee/employee.component.html
@@ -4,13 +4,17 @@
       <div class="controles-container">
         <input type="hidden" formControlName="$key">
         <mat-form-field>
-          <input formControlName="fullName" matInput placeholder="Full Name">
+          <input formControlName="fullName" matInput placeholder="Full Name*">
+          <mat-error>This field is mandatory.</mat-error>
         </mat-form-field>
         <mat-form-field>
           <input formControlName="email" matInput placeholder="Email">
+          <mat-error>Invalid email address.</mat-error>
         </mat-form-field>
         <mat-form-field>
-          <input formControlName="mobile" matInput placeholder="Mobile">
+          <input formControlName="mobile" matInput placeholder="Mobile*">
+          <mat-error *ngIf="svc.form.controls['mobile'].errors?.required">This field is mandatory.</mat-error>
+          <mat-error *ngIf="svc.form.controls['mobile'].errors?.minlength">Minimum 8 characters needed.</mat-error>
         </mat-form-field>
         <mat-form-field>
           <input formControlName="city" matInput placeholder="City">
@@ -43,8 +47,8 @@
           <mat-checkbox formControlName="isPermanent">Permanent Employee</mat-checkbox>
         </div>
         <div class="button-row">
-          <button mat-raised-button color="primary" type="submit">Submit</button>
-          <button mat-raised-button color="warn">Clear</button>
+          <button mat-raised-button color="primary" type="submit" [disabled]="svc.form.invalid">Submit</button>
+          <button mat-raised-button color="warn" (click)="onClear()">Clear</button>
         </div>
       </div>
     </mat-grid-tile>
