--- a/src/styles.css
+++ b/src/styles.css
@@ -33,3 +33,13 @@ mat-radio-group mat-radio-button{
 .button-row button{
     margin: 5px;
 }
+
+snack-bar-container.success{
+    background-color: #5cb85c;
+    color: white;
+}
+
+snack-bar-container.notification simple-snack-bar{
+    font-size: 18px !important;
+    font-weight: bold;
+}
