--- a/src/styles.css
+++ b/src/styles.css
@@ -1,45 +1,54 @@
 /* You can add global styles to this file, and also import other style files */
-@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
-div.container{
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+div.container {
     margin: 0px 40px;
 }
 
-.fill-remaining-space{
+.fill-remaining-space {
     flex: 1 1 auto;
 }
 
-form.normal-form{
+form.normal-form {
     margin: 10px;
 }
 
-.controles-container{
+.controles-container {
     width: 100%;
     padding: 5%;
 }
 
-.controles-container > * {
+.controles-container>* {
     width: 100%;
 }
 
-.add-bottom-padding{
+.add-bottom-padding {
     padding-bottom: 10px;
 }
 
-mat-radio-group mat-radio-button{
+mat-radio-group mat-radio-button {
     margin-left: 5px;
 }
 
-.button-row button{
+.button-row button {
     margin: 5px;
 }
 
-snack-bar-container.success{
+snack-bar-container.success {
     background-color: #5cb85c;
     color: white;
 }
 
-snack-bar-container.notification simple-snack-bar{
+snack-bar-container.notification simple-snack-bar {
     font-size: 18px !important;
     font-weight: bold;
+}
+
+.hide {
+    display: none;
+}
+
+mat-footer-row mat-footer-cell {
+    justify-content: center;
+    font-style: italic;
 }
