--- a/src/styles.css
+++ b/src/styles.css
@@ -81,3 +81,10 @@ mat-footer-row mat-footer-cell {
     height: 32px;
     width: 32px;
 }
+
+.btn-dialog-close {
+    width: 45px;
+    min-width: 0px !important;
+    height: 40px;
+    padding: 0px !important;
+}
