--- a/src/styles.css
+++ b/src/styles.css
@@ -39,6 +39,11 @@ snack-bar-container.success {
     color: white;
 }
 
+snack-bar-container.warn {
+    background-color: #f99157;
+    color: white;
+}
+
 snack-bar-container.notification simple-snack-bar {
     font-size: 18px !important;
     font-weight: bold;
